--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ python-dotenv
 duckduckgo-search
 datasets
 pandas
-google-cloud-aiplatform==1.25.0
+google-cloud-aiplatform
+google-api-python-client
+tabulate
